-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: client-libs
-
b143
-
linux, solaris
XKeycodeToKeysym is deprecated and when compiled on Solaris 12 with warnings-as-errors this causes a compile time failure. References to XKeycodeToKeysym should be replaced by XkbKeycodeToKeysym.
See https://bugs.freedesktop.org/show_bug.cgi?id=5349
As this is common XOrg code it will affect Linux as well.
See https://bugs.freedesktop.org/show_bug.cgi?id=5349
As this is common XOrg code it will affect Linux as well.
- relates to
-
JDK-8160146 Resolve disabled GCC warning 'deprecated-declarations' for libawt_xawt
-
- Resolved
-