8165232: XKeycodeToKeysym is deprecated and should be replaced

Reviewed-by: prr, azvegint